# Cortex

./: .gitignore  ARCHITECTURE-EXTENSION.md  ARCHITECTURE.md  LICENSE  README.md  idea.md  m1_classify.py  pyproject.toml
.github/workflows/: pages.yml  test.yml
config/: categories.yaml
docs/: REPORT.md
src/organizer/: __init__.py  calibrate.py  classify.py  cli.py  config.py  database.py  embedding.py  executor.py  features.py  history.py  ingest.py  planner.py  preferences.py  rules.py  taxonomy.py  tui.py  types.py  watcher.py
testbench/: eval.py
tests/: conftest.py  test_calibrate.py  test_m1.py  test_m1_contracts.py  test_m2.py  test_pdf.py  test_rules.py  test_tui.py  test_watcher.py
web/: index.html
